[package]
name = "identify-tts"
version = "0.1.0"
authors = ["Dmitrii - Demenev <demenev.dmitriy1@mail.ru>"]
edition = "2018"
description = "Function-like procedural macro for turning transcribers like $($ty)* into arrays of formated stringified TokenTrees for debugging"
documentation = "https://docs.rs/identify-tts"
repository = "https://github.com/JohnScience/identify_tts"
license = "MIT"
keywords = ["macro", "macros", "static", "data-structures"]
categories = ["development-tools::procedural-macro-helpers"]


[dependencies]
syn = "1.0.18"
quote = "1.0.3"
proc-macro-hack = "0.5.15"

[lib]
proc-macro = true